Quality of life improvements

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="projektit"></div> <!-- Tähän tulee projektit dynaamisesti -->
         </aside>
         <article id="article">
-            <div id="back-to-main-screen" onclick="backFromArticle()">Takaisin</div>
+            <div id="back-to-main-screen" onclick="backFromArticle()"> &lt; Takaisin</div>
             <p id="articleName" class="slowshow"></p>
             <h2 id="articleHeading" class="slowshow"></h2>
             <div id="articleContent" class="slowshow"></div>
