Added 2 Apps and a lot of content

--- a/apps/sanapeli/index.html
+++ b/apps/sanapeli/index.html
@@ -124,7 +124,7 @@
 
         <div class="fake-footer">
             <p>Rasmus Hautamäki</p>
-            <a href="https://www.rasmushautamaki.com">Etusivu</a><br>
+            <!-- <a href="https://www.rasmushautamaki.com">Etusivu</a><br> -->
             <!-- <a href="">Pelaa muita pelejä</a> -->
         </div>
 
