--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <button onclick="showcategory.call(this, 'nettisivu')"><div class="ball blue-icon"></div>Nettisivu</button>
                 <button onclick="showcategory.call(this, 'iot')"><div class="ball pink-icon"></div>IOT-projekti</button>
                 <button onclick="showcategory.call(this, 'atk')"><div class="ball yellow-icon"></div>Aputyökalu</button>
-                <button onclick="showcategory.call(this, '')">Virtuaalimaailmat</button>
-                <button onclick="showcategory.call(this, 'peli')"><div class="ball red-icon"></div>Pelit</button>
-                <button onclick="showcategory.call(this, 'modi')"><div class="ball green-icon"></div>Modit</button>
+                <!-- <button onclick="showcategory.call(this, '')">Virtuaalimaailmat</button> -->
+                <button onclick="showcategory.call(this, 'peli')"><div class="ball red-icon"></div>Peli</button>
+                <!-- <button onclick="showcategory.call(this, 'modi')"><div class="ball green-icon"></div>Modit</button> -->
             </div>
         </div>
     </nav>
