--- a/artikkeli.html
+++ b/artikkeli.html
@@ -7,20 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-            <img src='images/piirilevy.jpg'>
-            <h3>Miten laite toimii?</h3>
-            <p>Käyttäjä voi valita 16 eri värin ja valoanimaation joukosta painamalla näppäintaulua.</p>
+            <img src='images/colorpalette1.jpg'>
+            <h3>Miten generaattori toimii?</h3>
+            <p>Käyttäjä voi luoda satunnaisesti generoidun väripaletin ja hyödyntää sitä nettisivukehityksessä. Ominaisuuksina löytyy myös väripalettien tallentaminen selaimen musitiin.</p>
             
-            <h3>Tekninen</h3>
 
-            <h3>        Mistä projekti sai alkunsa    </h3>    
-            <p>        Ajatus lähti Pinterestistä kun näin kuvan baarikaapista tai baarihyllystä, joka oli tehty vanhan putkitelevision rungosta. Kiinnostuin heti ideasta rakentaa itselle myös oma versio.    </p>    <p>        Menin heti Toriin ja löysin Saloran putkitelevision, jota oli käytetty kirjahyllynä. Eli sieltä oli poistettu kaikki putkitelevision komponentit sisältä.    </p>    <p>        Huomasin kuitenkin että yksi piirilevy oli jätetty television runkoon kiinni - ja hyvästä syystä. Tämä piirilevy siis pitää kiinni etupaneelin napit ja ilman piirilevyä television rungossa olisi iso reikä.    </p>    <p>        Tämä sai minut ajattelemaan että olisiko mahdollista hyödyntää television nappeja vaihtamaan baarikaapin ledien värejä tai kuviota. Tämä oli kuin olikin mahdollista!    </p>    <div class='image-with-text'>        <div>            <p>Aikaisempi - todella, todella, todella vähäinen - kokemus piirilevyistä ja komponenteista ei oikein auttanut projektin haasteissa.</p>        </div>        <img src='images/piirilevy.png' alt=''>    </div>    <h3>        Projektin haasteet    </h3>    <p>Projekti oli mielekäs, mutta todella haastava. Minulla oli oikea ajatus jo heti projektin lähtöpisteestä, se miten johdot tulisi kolvata piirilevyyn.</p>    <p>Tarkistin piirilevyn nappien sijainnit ja mihin ne johtavat. Piirilevy käyttää tyypillistä 4x4 nappimatrixia, mikä antaa meille 16 nappia 8 johdolla. Leikkasin sopivan mittaiset johdot ja kolvasin ne piirilevyyn.</p>    <p>Tein kytkennät johdoille arduinoon ja oli aika testata. Ei toimi...</p>    <p>Pitkän selvittelyn jälkeen, lukuisien nappimatrix dokumenttien lukemisen ja johtojen järjestyksen vaihtelemisen jälkeen. Ei toimi vieläkään.</p>    <p>Kirjoitin nappeja ohjaavan koodinkin ylösalaisin ja ympäri vaikka kuinka monesti, mutta en saanut toivottua tulosta. Satunnaisesti jotkut napit saattoivat toimia, ja joskus sattui haamupainalluksia.</p>    <p>Ihmettelin mistä tämä voi johtua ja päädyin lopputulokseen että johtoni olivat liian pitkät ja kasassa toistensa kanssa aiheuttaisi haamupainalluksia sähkön pomppiessa johdosta toiseen.</p>    <p>Joten leikkasin johdot lyhyiksi ja kokeilin uudestaan. Ei vieläkään.</p>    <p>Annoin projektin hautua ja tullessa takaisin mietin voisiko piirilevyn alkuperäiset komponentit vaikuttaa nappien toimintaan. Otin siis kolvin käteen ja poistin komponentin jonka ajattelin eniten vaikuttavan nappimatrixiin. Ja kuinkas ollakkaan, homma alkoi pelittämään.</p>    <div class='image-with-text'>        <img src='images/pvb.jpg' alt=''>        <div>            <p>Aikaisempi - todella, todella, todella vähäinen - kokemus piirilevyistä ja komponenteista ei oikein auttanut projektin haasteissa.</p>        </div>    </div>
+            <div class='image-with-text'><p>This is a text</p><img src='images/colorpalette2.png'></div>
 
-            <h3>Tulevia suunnitelmia</h3>
-            <p>Laitteessa on myös lisää säätimiä kuten</p>
-            <p>Näistä saisi varmasti tehtyä kirkkauden säätimen valoille ja liikkuvissa kuvioissa säätää valojen nopeutta. Olisi myös hyvä lisätä pieni näyttö kertomaan käyttäjälle mikä valoasetus on kyseessä.</p>
-
-            <div class='image-with-text'><img src='images/gta.jpg'><img src='images/valoja.jpg'></div>
+            <div class='image-with-text'><img src='images/colorpalette3.png'> <p>this is a text</p></div>
 
         </body>
 </html>
