--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <p>Täältä pääset näkemään IT-töitäni sekä projekteja joissa olen ollut mukana että myös harrasteluita.</p>
-            <h2>Valitse projektit kategorian mukaan</h2>
+            <h2 class="non-bold">Valitse projektit kategorian mukaan</h2>
             <div class="search-options">
                 <button onclick="showcategory('', event)" class="selected">Näytä kaikki</button>
                 <button onclick="showcategory('nettisivu', event)"><div class="ball blue-icon"></div>Nettisivu</button>
@@ -40,7 +40,7 @@
     </nav>
     <main>
         <aside>
-            <h2>Näytetään kaikki projektit</h2>
+            <h2 class="non-bold">Näytetään projektit</h2>
             <div id="projektit"></div> <!-- Tähän tulee projektit dynaamisesti -->
         </aside>
         <article id="article">
