--- a/artikkeli.html
+++ b/artikkeli.html
@@ -16,5 +16,23 @@
 
             <div class='image-with-text'><img src='images/colorpalette3.png'> <p>this is a text</p></div>
 
+                    <img src='images/lights-change.gif'>
+                    <h3>Miten baarikaappi toimii?</h3>
+                    <p>Baarikaappi on rakennettu vanhaan Saloran putkitelevision runkoon.</p>
+
+                    <div class='image-with-text'><img src='images/lights-change.gif'> <p></p></div>
+
+                    <div class='image-with-text'><p>Valoja pystyy vaihtamaan putkitelevision napeista. Nappeja on yhteensä 16, joista jokaisessa on oma väri tai väriyhdistelmä.</p><img src='images/button-press.gif'></div>
+
+                    <h3>I</h3>
+                    <p>Ajatus projektiin lähti Pinterestistä, jossa näin jonkun tehneen putkitelevisiosta baarikaapin ja lisäämällä sinne led-valot.</p>
+                    <p>Sattumalta huomasin, että television nappien takana oli vielä jätetty yksi piirilevy ja ajattelin heti kokeilevani saada ledit toimimaan television napeilla.</p>
+
+
+
+
+
+                    <h3>        Mistä projekti sai alkunsa    </h3>    <p>        Ajatus lähti Pinterestistä kun näin kuvan baarikaapista tai baarihyllystä, joka oli tehty vanhan putkitelevision rungosta. Kiinnostuin heti ideasta rakentaa itselle myös oma versio.    </p>    <p>        Menin heti Toriin ja löysin Saloran putkitelevision, jota oli käytetty kirjahyllynä. Eli sieltä oli poistettu kaikki putkitelevision komponentit sisältä.    </p>    <p>        Huomasin kuitenkin että yksi piirilevy oli jätetty television runkoon kiinni - ja hyvästä syystä. Tämä piirilevy siis pitää kiinni etupaneelin napit ja ilman piirilevyä television rungossa olisi iso reikä.    </p>    <p>        Tämä sai minut ajattelemaan että olisiko mahdollista hyödyntää television nappeja vaihtamaan baarikaapin ledien värejä tai kuviota. Tämä oli kuin olikin mahdollista!    </p>    <div class='image-with-text'>        <div>            <p>Aikaisempi - todella, todella, todella vähäinen - kokemus piirilevyistä ja komponenteista ei oikein auttanut projektin haasteissa.</p>        </div>        <img src='images/piirilevy.png' alt=''>    </div>    <h3>        Projektin haasteet    </h3>    <p>Projekti oli mielekäs, mutta todella haastava. Minulla oli oikea ajatus jo heti projektin lähtöpisteestä, se miten johdot tulisi kolvata piirilevyyn.</p>    <p>Tarkistin piirilevyn nappien sijainnit ja mihin ne johtavat. Piirilevy käyttää tyypillistä 4x4 nappimatrixia, mikä antaa meille 16 nappia 8 johdolla. Leikkasin sopivan mittaiset johdot ja kolvasin ne piirilevyyn.</p>    <p>Tein kytkennät johdoille arduinoon ja oli aika testata. Ei toimi...</p>    <p>Pitkän selvittelyn jälkeen, lukuisien nappimatrix dokumenttien lukemisen ja johtojen järjestyksen vaihtelemisen jälkeen. Ei toimi vieläkään.</p>    <p>Kirjoitin nappeja ohjaavan koodinkin ylösalaisin ja ympäri vaikka kuinka monesti, mutta en saanut toivottua tulosta. Satunnaisesti jotkut napit saattoivat toimia, ja joskus sattui haamupainalluksia.</p>    <p>Ihmettelin mistä tämä voi johtua ja päädyin lopputulokseen että johtoni olivat liian pitkät ja kasassa toistensa kanssa aiheuttaisi haamupainalluksia sähkön pomppiessa johdosta toiseen.</p>    <p>Joten leikkasin johdot lyhyiksi ja kokeilin uudestaan. Ei vieläkään.</p>    <p>Annoin projektin hautua ja tullessa takaisin mietin voisiko piirilevyn alkuperäiset komponentit vaikuttaa nappien toimintaan. Otin siis kolvin käteen ja poistin komponentin jonka ajattelin eniten vaikuttavan nappimatrixiin. Ja kuinkas ollakkaan, homma alkoi pelittämään.</p>    <div class='image-with-text'>        <img src='images/pvb.jpg' alt=''>        <div>            <p>Aikaisempi - todella, todella, todella vähäinen - kokemus piirilevyistä ja komponenteista ei oikein auttanut projektin haasteissa.</p>        </div>    </div>
+
         </body>
 </html>
