Added url parameters (dev only)

--- a/artikkeli.html
+++ b/artikkeli.html
@@ -18,7 +18,7 @@
 
                     <img src='images/lights-change.gif'>
                     <h3>Miten baarikaappi toimii?</h3>
-                    <p>Baarikaappi on rakennettu vanhaan Saloran putkitelevision runkoon.</p>
+                    <p>Baarikaappi on rakennettu vanhaan Saloran putkitelevision runkoon sekä lisätty Arduino Uno ohjaamaan led-valoja.</p>
 
                     <div class='image-with-text'><img src='images/lights-change.gif'> <p></p></div>
 
