--- a/index.html
+++ b/index.html
@@ -58,4 +58,5 @@
 <script src="app.js"></script>
 <script src="theme.js"></script>
 <script src="mobile.js"></script>
+<script src="articleParameter.js"></script>
 </html>
